--- a/resume.html
+++ b/resume.html
@@ -6,43 +6,52 @@
 	</head>
 
 	<body>
-
-		<h1>Wendy G. Bite</h1>
-
-		<nav>
-			<a href="index.html">About Me</a> | <strong>Resume</strong>
-		</nav>
-
-		<hr />
+		<header>
+			<h1>Wendy G. Bite</h1>
+			<nav>
+				<a href="index.html">About Me</a> | <strong>Resume</strong>
+			</nav>
+			<hr />
+		</header>
 
 		<h2>Resume</h2>
 
 		<p>I recently graduated from a Web Development course at General Assembly where I increased my typing speed from 10 words per minute on my type writer to 100 words per minute on my new MacBook Pro. They also taught me how to be an <strong>awesome</strong>Web Developer. During my spare time, I enjoy senior water aerobics, pickling, and spending time with my great grand children.</p>
 
 		<h3>Relevant Experience</h3>
-		
-		<p>Web Developer GitHub 2013 - present<br />
-		Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p>
+			<ul>
+				<li><h4><strong>Web Developer</strong>, GitHub <small>2013 - present</small></h4>
+				<p>Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p>
+				</li>
 
-		<p>Copy Editor Complaint.ly 2012 - 2013<br />
-		Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)</p>
+				<li><h4><strong>Copy Editor</strong>, Complaint.ly <small>2012 - 2013</small></h4>
+				<p>Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)</p>
+				</li>
+			
+				<li><h4><strong>Master Knitter</strong>, Christmas Sweater Org <small>1992 – 2011</small></h4>
+				<p>Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p>
+				</li>
 
-		Master Knitter Christmas Sweater Org 1992 – 2011
-		Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.
+				<li><h4><strong>Senior Vice President</strong>, The Golden Girls Appreciation Society <small>1985 - 1992</small></h4>
+				<p>Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.</p>
+				</li>
 
-		Senior Vice President The Golden Girls Appreciation Society 1985 - 1992
-		Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.
-						
-		Certified Mint Candy and Freshly Baked Cookies Distributor. 1960S
-		Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)
+				<li><h4>Certified Mint Candy and Freshly Baked Cookies Distributor </small>1960s</small></h4>
+				<p>Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p>
+				</li>
+			</ul>
 
+		<h3>Education</h3>			
+			<ul>
+				<li><h4><strong>General Assembly</strong> WDI - 2013</h4></li>
+				<li><h4><strong>Queens College</strong> B.A. - 1923</h4></li>
+				<li><h4><strong>Brooklyn Etiquette School For Girls</strong> - 1920 (Honors)</h4></li>
+			</ul>
 
-		Education
-				
-		General Assembly WDI — 2013
-		Queens College B.A. 1923
-		Brooklyn Etiquette School For Girls 1920(Honors)
+		<hr />
 
-
+		<footer>
+			<a href="">Facebook</a> | <a href="">Twitter</a> | <a href="">Instagram</a> | <a href="">LinkedIn</a>
+		</footer>
 	</body>
 </html>
